--- a/MyBlazorFirstSample/MyBlazorFirstSample.csproj
+++ b/MyBlazorFirstSample/MyBlazorFirstSample.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>8f7084ae-d6b0-42e1-a06d-49f0d7c20446</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
+  </ItemGroup>
 
 </Project>
